<resources>
    <string name="app_name">Drops</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!--String for splash screen -->
    <string name="splash_text1">Welcome</string>
    <string name="splash_text2">to your university messaging hub</string>
    <string name="singup_text1">Sign up</string>
    <string name="sign_up_now">Sign up now</string>

    <string name="signup_text2">Already have an account?</string>
    <string name="signup_text3">Log in now</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_settings">Settings</string>
    <string name="title_map">Map</string>
    <string name="nearby_notes">Nearby notes</string>
    <string name="group_name">Group name</string>
    <string name="add_members">Add members</string>
    <string name="username">username</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="background_image">background image</string>
    <string name="log_in">Log in</string>
    <string name="no_account_yet">No account yet?</string>
    <string name="sign_up">Sign up</string>
    <string name="moderator_role">Moderator role</string>
    <string name="logo">logo</string>
    <string name="_100">100</string>
    <string name="plus">+</string>
    <string name="leave_group">Leave group</string>
    <string name="send_comment">Send comment</string>
    <string name="close">Close</string>
    <string name="_10_00">10:00</string>
    <string name="_10">10</string>
    <string name="add_comment">Add comment</string>
    <string name="group_selector">Group selector</string>
    <string name="add_a_message">Add a message...</string>
    <string name="title">Title...</string>
    <string name="anon">Anon</string>
    <string name="search">Search</string>
    <string name="moderator_mode">Moderator mode</string>
    <string name="change_password">Change password</string>
    <string name="log_out">Log out</string>
    <string name="delete_account">Delete account</string>
    <string name="new_group">New group</string>


</resources>