<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    app:cardUseCompatPadding="true"
    app:cardMaxElevation="5dp"
    app:cardElevation="5dp"
    app:cardCornerRadius="25dp"
    app:cardBackgroundColor="@color/purple_50"
    app:cardPreventCornerOverlap="true"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginHorizontal="20dp">

    <TextView
        android:id="@+id/create_group_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/inter_semibold"
        android:paddingStart="10dp"
        android:text="Create new group"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/purple_500"
        android:textSize="25sp"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:fontFamily="@font/inter_medium"
        android:inputType="textPersonName"
        android:paddingHorizontal="10dp"
        android:hint="@string/group_name"
        android:textColorHint="@color/purple_500"
        android:textColor="@color/purple_500"
        app:backgroundTint="@color/purple_500"
/>
    <TextView
        android:id="@+id/add_members"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/inter_semibold"
        android:paddingStart="10dp"
        android:text="@string/add_members"
        android:textColor="@color/purple_500"
        android:textSize="18sp"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/search_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint= "@string/search"
        android:autofillHints="username"
        android:inputType="text"
        android:singleLine="true"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp"
        android:background="@drawable/standard_button"
        android:backgroundTint="@color/purple_500"
        tools:layout_editor_absoluteX="16dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/members_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        tools:listitem="@layout/chip_group_member" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp">
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/standard_button"
        android:backgroundTint="@color/red"
        android:fontFamily="@font/inter_medium"
        android:text="@string/cancel"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="16sp"
       />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/create_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/standard_button"
        android:fontFamily="@font/inter_medium"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp"
        android:text="@string/create"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="16sp" />
        </LinearLayout>
</LinearLayout>
</androidx.cardview.widget.CardView>