<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    app:cardUseCompatPadding="true"
    app:cardMaxElevation="5dp"
    app:cardElevation="5dp"
    app:cardCornerRadius="25dp"
    app:cardBackgroundColor="@color/purple_50"
    app:cardPreventCornerOverlap="true"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp">

        <LinearLayout
            android:id="@+id/header_title_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.466"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.05">

            <EditText
                android:id="@+id/input_drop_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/teal_700"
                android:fontFamily="@font/inter_semibold"
                android:hint="@string/title"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/teal_700"
                android:textColorHint="@color/teal_700"
                android:textSize="25sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/close_dialog_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/baseline_close_24"
                android:backgroundTint="@color/teal_700"
                android:contentDescription="@string/close"
                tools:layout_editor_absoluteX="331dp"
                tools:layout_editor_absoluteY="791dp" />
        </LinearLayout>

        <EditText
            android:id="@+id/input_drop_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/teal_700"
            android:fontFamily="@font/inter_medium"
            android:hint="@string/add_a_message"
            android:inputType="textCapSentences|textMultiLine"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/teal_700"
            android:textColorHint="@color/teal_700"
            android:textSize="19sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.466"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header_title_layout"
            app:layout_constraintVertical_bias="0.051" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:paddingTop="100dp"
            android:gravity="bottom"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.466"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_drop_content"
            app:layout_constraintVertical_bias="1.0">

            <Switch
                android:id="@+id/anonymous_button"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:backgroundTint="@color/teal_700"
                android:text="@string/anon"
                android:textColor="@color/teal_700"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <Spinner
                android:id="@+id/group_visibility_spinner"
                android:layout_width="178dp"
                android:layout_height="50dp"
                android:backgroundTint="@color/teal_700"
                android:contentDescription="@string/group_selector"
                android:layout_weight="1"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/send_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:contentDescription="@string/send_comment"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_drop_content"
                app:layout_constraintVertical_bias="1.0"
                app:srcCompat="@drawable/baseline_send_50"
                tools:ignore="ContentDescription" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>